Fix Movies Widget title overflow #216

--- a/assets/css/public/wpmoly.css
+++ b/assets/css/public/wpmoly.css
@@ -1153,6 +1153,10 @@
 	display: block;
 	font-weight: 600;
 	margin: 0.5em 0;
+	max-width: 150px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .widget .wpmoly.movies .wpmoly.link {
